[tool.poetry]
name = "back-fast"
version = "0.1.0"
description = ""
authors = ["raphael <raphael.raasch@wahalla.com>"]
readme = "README.md"
packages = [{include = "back_fast"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
